--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -13,9 +13,6 @@ on:
         required: false
         type: string
         default: aws_devops_tools
-      REGISTRY_PATH:
-        required: true
-        type: string
     
 jobs:   
   build:
@@ -37,7 +34,7 @@ jobs:
     - name: Login ECR registry
       run: aws ecr get-login-password --region eu-west-1 | docker login --username AWS --password-stdin ${{ secrets.base_registry_path }}/${{ inputs.PROJECT_NAME }}
     - name: Build the Docker image
-      run: docker build -t ${{ inputs.REGISTRY_PATH }}/${{ inputs.PROJECT_NAME }}:${{ github.sha }} .
+      run: docker build -t ${{ env.REGISTRY_PATH }}/${{ inputs.PROJECT_NAME }}:${{ github.sha }} .
     - name: Push docker image
-      run: docker push ${{ inputs.REGISTRY_PATH }}/${{ inputs.PROJECT_NAME }}:${{ github.sha }}
+      run: docker push ${{ env.REGISTRY_PATH }}/${{ inputs.PROJECT_NAME }}:${{ github.sha }}
 
