--- a/.github/workflows/rancher-deploy.yml
+++ b/.github/workflows/rancher-deploy.yml
@@ -21,7 +21,7 @@ on:
         required: true
 
 jobs:
-  deploy:
+  rancher:
       runs-on: ubuntu-latest
       steps:
       - name: Deploy on Rancher
