--- a/.github/workflows/build-image-on-ecr-with-vault.yml
+++ b/.github/workflows/build-image-on-ecr-with-vault.yml
@@ -47,7 +47,7 @@ jobs:
       run: aws ecr get-login-password --region ${{ inputs.AWS_REGION }} | docker login --username AWS --password-stdin ${{ inputs.BASE_REGISTRY_PATH }}/${{ inputs.PROJECT_NAME }}
     - name: Login on Public ECR Registry
       if: ${{ inputs.IS_PUBLIC == true }}
-      run: aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin ${{ inputs.BASE_REGISTRY_PATH }}/${{ inputs.PROJECT_NAME }}
+      run: aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin ${{ inputs.BASE_REGISTRY_PATH }}
     - name: Build the Docker image
       run: docker build -t ${{ inputs.BASE_REGISTRY_PATH }}/${{ inputs.PROJECT_NAME }}:${{ github.sha }}-${{ github.ref_name }} .
     - name: Tag image with additional custom tag
