--- a/.github/workflows/deploy-on-ecs-with-vault.yml
+++ b/.github/workflows/deploy-on-ecs-with-vault.yml
@@ -63,15 +63,14 @@ jobs:
         NEW_CONTAINER_DEFINTIION=$(echo $TASK_DEFINITION | jq --arg IMAGE "${{inputs.IMAGE_TO_DEPLOY}}" '.taskDefinition.containerDefinitions[0].image = $IMAGE | .taskDefinition.containerDefinitions[0]')
         echo "Registering new container definition..."
         aws ecs register-task-definition --region ${{inputs.AWS_REGION}} --family "${{inputs.TASK_DEFINITION_NAME}}" --container-definitions "${NEW_CONTAINER_DEFINTIION}" --requires-compatibilities ${{inputs.REQUIRES_COMPATIBILITIES}} --network-mode ${{inputs.NETWORK_MODE}} --cpu ${{inputs.CPU}} --memory ${{inputs.MEMORY}} --task-role-arn ${{inputs.TASK_IAM_ROLE}} --execution-role-arn ${{inputs.TASK_IAM_ROLE}} > /dev/null
-    - name: Updating the service (Fargate)
-      if: ${{inputs.CPU != '' && inputs.MEMORY != '' && inputs.REQUIRES_COMPATIBILITIES != ''}}
-      run: |
-        aws ecs update-service --region ${{inputs.AWS_REGION}} --cluster "${{inputs.CLUSTER_NAME}}" --service "${{inputs.SERVICE_NAME}}" --desired-count 0
-        aws ecs update-service --region ${{inputs.AWS_REGION}} --cluster "${{inputs.CLUSTER_NAME}}" --service "${{inputs.SERVICE_NAME}}" --task-definition "${{inputs.TASK_DEFINITION_NAME}}"
-        aws ecs update-service --region ${{inputs.AWS_REGION}} --cluster "${{inputs.CLUSTER_NAME}}" --service "${{inputs.SERVICE_NAME}}" --desired-count 1
-        echo "Deploy completed!"
     - name: Register new container definition (EC2 based)
       if: ${{inputs.CPU == '' || inputs.MEMORY == '' || inputs.REQUIRES_COMPATIBILITIES == ''}}
       run: |
+        TASK_DEFINITION=$(aws ecs describe-task-definition --task-definition "${{inputs.TASK_DEFINITION_NAME}}" --region ${{inputs.AWS_REGION}})
+        NEW_CONTAINER_DEFINTIION=$(echo $TASK_DEFINITION | jq --arg IMAGE "${{inputs.IMAGE_TO_DEPLOY}}" '.taskDefinition.containerDefinitions[0].image = $IMAGE | .taskDefinition.containerDefinitions[0]')
         echo "Registering new container definition..."
-        aws ecs update-service --region ${{inputs.AWS_REGION}} --cluster "${{inputs.CLUSTER_NAME}}" --service "${{inputs.SERVICE_NAME}}" --force-new-deployment > /dev/null
+        aws ecs register-task-definition --region ${{inputs.AWS_REGION}} --family "${{inputs.TASK_DEFINITION_NAME}}" --container-definitions "${NEW_CONTAINER_DEFINTIION}" --network-mode ${{inputs.NETWORK_MODE}} > /dev/null
+    - name: Updating the service
+      run: |
+        aws ecs update-service --region ${{inputs.AWS_REGION}} --cluster "${{inputs.CLUSTER_NAME}}" --service "${{inputs.SERVICE_NAME}}" --task-definition "${{inputs.TASK_DEFINITION_NAME}}" --force-new-deployment
+        echo "Deploy completed!"
