--- a/.github/workflows/cloudfront-cache-invalidation.yml
+++ b/.github/workflows/cloudfront-cache-invalidation.yml
@@ -6,6 +6,9 @@ on:
       DISTRIBUTION_ID:
         required: true
         type: string
+      VAULT_AWS_NAME:
+        required: true
+        type: string
       AWS_REGION:
         required: true
         type: string
@@ -14,5 +17,17 @@ jobs:
   cloudfront-cache-invalidation:
     runs-on: ubuntu-latest
     steps:
+      - name: Import Secrets
+        uses: hashicorp/vault-action@v2.4.2
+        with:
+          url: https://vault.crispybacon.it
+          token: ${{ secrets.vault_token }}
+          secrets: |
+            ${{ inputs.VAULT_AWS_NAME }}/creds/github-pipeline-access-role access_key | AWS_ACCESS_KEY_ID ;
+            ${{ inputs.VAULT_AWS_NAME }}/creds/github-pipeline-access-role secret_key | AWS_SECRET_ACCESS_KEY ;
+
+      - name: Wait for IAM credentials to be ready
+        run: sleep 10
+
       - name: cache invalidation on distribution ID ${{ inputs.DISTRIBUTION_ID }}
         run: aws cloudfront create-invalidation --distribution-id ${{ inputs.DISTRIBUTION_ID }} --paths "/*" "/**/*" --region ${{ inputs.AWS_REGION }}
