--- a/.github/workflows/deploy-on-ecs-with-vault.yml
+++ b/.github/workflows/deploy-on-ecs-with-vault.yml
@@ -72,7 +72,7 @@ jobs:
         TASK_DEFINITION=$(aws ecs describe-task-definition --task-definition "${{inputs.TASK_DEFINITION_NAME}}" --region ${{inputs.AWS_REGION}})
         NEW_CONTAINER_DEFINTIION=$(echo $TASK_DEFINITION | jq --arg IMAGE "${{inputs.IMAGE_TO_DEPLOY}}" '.taskDefinition.containerDefinitions[0].image = $IMAGE | .taskDefinition.containerDefinitions[0]')
         echo "Registering new container definition..."
-        aws ecs register-task-definition --region ${{inputs.AWS_REGION}} --family "${{inputs.TASK_DEFINITION_NAME}}" --container-definitions "${NEW_CONTAINER_DEFINTIION}" --requires-compatibilities ${{inputs.REQUIRES_COMPATIBILITIES}} --network-mode ${{inputs.NETWORK_MODE}} --cpu ${{inputs.CPU}} --memory ${{inputs.MEMORY}} --task-role-arn ${{inputs.TASK_IAM_ROLE}} --execution-role-arn ${{inputs.TASK_IAM_ROLE}} --volumes ${{inputs.VOLUME_JSON_DEFINITION}} > /dev/null
+        aws ecs register-task-definition --region ${{inputs.AWS_REGION}} --family "${{inputs.TASK_DEFINITION_NAME}}" --container-definitions "${NEW_CONTAINER_DEFINTIION}" --requires-compatibilities ${{inputs.REQUIRES_COMPATIBILITIES}} --network-mode ${{inputs.NETWORK_MODE}} --cpu ${{inputs.CPU}} --memory ${{inputs.MEMORY}} --task-role-arn ${{inputs.TASK_IAM_ROLE}} --execution-role-arn ${{inputs.TASK_IAM_ROLE}} --volumes '${{inputs.VOLUME_JSON_DEFINITION}}' > /dev/null
     - name: Register new container definition (EC2 based)
       if: ${{inputs.CPU == '' || inputs.MEMORY == '' || inputs.REQUIRES_COMPATIBILITIES == ''}}
       run: |
