--- a/.github/workflows/deploy-on-ecs-with-vault.yml
+++ b/.github/workflows/deploy-on-ecs-with-vault.yml
@@ -23,7 +23,7 @@ on:
         required: true
         type: string
       TASK_IAM_ROLE:
-        required: true
+        required: false
         type: string
       AWS_REGION:
         required: true
