--- a/.github/workflows/build-android-app.yml
+++ b/.github/workflows/build-android-app.yml
@@ -4,7 +4,7 @@ on:
   workflow_call:
     inputs:
       ANDROID_ENABLE_UPLOAD:
-        type: choice
+        type: string
         required: true
       ANDROID_TRACK:
         required: true
