--- a/.github/workflows/build-android-app.yml
+++ b/.github/workflows/build-android-app.yml
@@ -90,4 +90,10 @@ jobs:
 #        run: fastlane deploy
 #        env:
 #          ANDROID_ENABLE_UPLOAD: ${{ inputs.ANDROID_ENABLE_UPLOAD }}
+      - name: Upload Artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: Releases
+          path: |
+            build/app/outputs/bundle/$FLAVORRelease/app-$FLAVOR-release.aab
 
