--- a/.github/workflows/build-android-app.yml
+++ b/.github/workflows/build-android-app.yml
@@ -46,7 +46,7 @@ env:
   
 jobs:
   build:
-    name: Build APK
+    name: Build Android app
 #    runs-on: ubuntu-latest
     runs-on: [self-hosted, macOS, ARM64, mr-mac]
     defaults:
