--- a/.github/workflows/upload-store-android-app.yml
+++ b/.github/workflows/upload-store-android-app.yml
@@ -50,12 +50,15 @@ jobs:
     if: ${{ inputs.ANDROID_ENABLE_UPLOAD }}
 #    runs-on: ubuntu-latest
     runs-on: [self-hosted, macOS, ARM64, mr-mac]
+    defaults:
+      run:
+        working-directory: android
     steps:
       - uses: actions/checkout@v4
       - name: Download a single artifact
         uses: actions/download-artifact@v4
         with:
-          name: Release ${{ env.FLAVOR }}
+          name: Release ${{ env.FLAVOR }} - version ${{ env.ANDROID_VERSION_NAME }}, build ${{ env.ANDROID_VERSION_CODE }}
       - name: Prepare Android json service account
         run: echo "${{ secrets.JSON_PLAY_STORE_API_KEY }}" | base64 --decode > api_key.json
       - name: Prepare Android keystore
