--- a/.github/workflows/upload-store-android-app.yml
+++ b/.github/workflows/upload-store-android-app.yml
@@ -47,7 +47,7 @@ env:
 jobs:
   upload:
     name: Upload Artifact to Play Store
-    if: ${{ inputs.ANDROID_ENABLE_UPLOAD }} != 'false'
+    if: ${{ inputs.ANDROID_ENABLE_UPLOAD != 'false' }} 
 #    runs-on: ubuntu-latest
     runs-on: [self-hosted, macOS, ARM64, mr-mac]
     defaults:
